[package]
name = "steam_scraper"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
thiserror = "1.0.40"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0.96"
indicatif = "0.17.3"
tokio = "1.28.2"